authelia/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
    - protocol: TCP
      port: 10001
      targetPort: 10001
